--- a/static-index.html
+++ b/static-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter-Strike: Global Offensive on Steam</title>
+    <title>Counter-Strike: Global Offensive</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         /* Additional styles for static placeholders */
@@ -79,10 +79,9 @@
                 <a href="#"><div class="logo-placeholder">STEAM</div></a>
             </div>
             <div class="menu">
-                <a href="#" class="active">STORE</a>
-                <a href="#">LIBRARY</a>
+                <a href="#">PERFORMANCE</a>
                 <a href="#">COMMUNITY</a>
-                <a href="#">ABOUT</a>
+                <a href="#">SERVERS</a>
                 <a href="#">SUPPORT</a>
             </div>
             <div class="global-actions">
@@ -100,16 +99,15 @@
         <div class="store-nav">
             <div class="store-nav-inner">
                 <div class="store-nav-left">
-                    <a href="#">Your Store</a>
-                    <a href="#">New Releases</a>
-                    <a href="#">Categories</a>
-                    <a href="#">News</a>
-                    <a href="#">Recommended</a>
+                    <a href="#">UPDATES</a>
+                    <a href="#">OPERATIONS</a>
+                    <a href="#">TOURNAMENTS</a>
+                    <a href="#">NEWS</a>
+                    <a href="#">DISCORD</a>
                 </div>
                 <div class="store-nav-right">
                     <div class="search">
-                        <input type="text" placeholder="search the store">
-                        <button class="btn-search"></button>
+                        <div class="date-time" id="date-time">Loading date and time...</div>
                     </div>
                     <div class="cart">
                         <a href="#" class="cart-btn"></a>
@@ -120,9 +118,6 @@
 
         <div class="app-page">
             <div class="app-header">
-                <div class="breadcrumbs">
-                    <a href="#">All Games</a> &gt; <a href="#">Action Games</a> &gt; <a href="#">Counter-Strike: Global Offensive</a>
-                </div>
                 <div class="app-title">
                     <h1>Counter-Strike: Global Offensive</h1>
                 </div>
@@ -154,7 +149,8 @@
                         <h2>About This Game</h2>
                         <p>Counter-Strike: Global Offensive (CS:GO) expands upon the team-based action gameplay that it pioneered when it was launched 19 years ago.</p>
                         <p>CS:GO features new maps, characters, weapons, and game modes, and delivers updated versions of the classic CS content (de_dust2, etc.).</p>
-                        <p>"Counter-Strike took the gaming industry by surprise when the unlikely MOD became the most played online PC action game in the world almost immediately after its release in August 1999," said Doug Lombardi at Valve. "For the past 12 years, it has continued to be one of the most-played games in the world, headline competitive gaming tournaments and selling over 25 million units worldwide across the franchise. CS:GO promises to expand on CS' award-winning gameplay and deliver it to gamers on the PC as well as the next gen consoles and the Mac."</p>
+                        <p>CS:GO has remained one of the most-played games in the world, continuing to headline competitive gaming tournaments and selling over 25 million units worldwide across the franchise.</p>
+                        <p>Join the global CS:GO community and experience the evolution of the world's most popular tactical FPS.</p>
                     </div>
 
                     <div class="sys-reqs">
@@ -184,6 +180,40 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="block">
+                        <div class="block-header">
+                            <h4>TOURNAMENTS</h4>
+                        </div>
+                        <div class="block-content">
+                            <a href="#" class="app-tag">ESL One</a>
+                            <a href="#" class="app-tag">DreamHack</a>
+                            <a href="#" class="app-tag">FACEIT Major</a>
+                            <a href="#" class="app-tag">BLAST Premier</a>
+                            <a href="#" class="app-tag">IEM Katowice</a>
+                            <a href="#" class="app-tag">StarLadder</a>
+                            <a href="#" class="app-tag">PGL Major</a>
+                            <a href="#" class="app-tag">ELEAGUE</a>
+                            <a href="#" class="app-tag">Community Cups</a>
+                        </div>
+                    </div>
+
+                    <div class="block">
+                        <div class="block-header">
+                            <h4>POPULAR GAME MODES</h4>
+                        </div>
+                        <div class="block-content">
+                            <a href="#" class="app-tag">Competitive</a>
+                            <a href="#" class="app-tag">Casual</a>
+                            <a href="#" class="app-tag">Deathmatch</a>
+                            <a href="#" class="app-tag">Wingman</a>
+                            <a href="#" class="app-tag">Arms Race</a>
+                            <a href="#" class="app-tag">War Games</a>
+                            <a href="#" class="app-tag">Danger Zone</a>
+                            <a href="#" class="app-tag">Retakes</a>
+                            <a href="#" class="app-tag">Community Servers</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="app-right-column">
@@ -192,29 +222,12 @@
                             <div class="csgo-header">CS:GO</div>
                         </div>
                         <div class="game-purchase-price">
-                            <h1>FREE TO PLAY</h1>
+                            <h1>PLAY NOW</h1>
                             <div class="game-purchase-action">
                                 <div class="btn-action">
-                                    <a href="#" class="btn-download">Download</a>
+                                    <a href="#" class="btn-download">LAUNCH GAME</a>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="block">
-                        <div class="block-header">
-                            <h4>CATEGORIES</h4>
-                        </div>
-                        <div class="block-content">
-                            <a href="#" class="app-tag">Action</a>
-                            <a href="#" class="app-tag">Free to Play</a>
-                            <a href="#" class="app-tag">FPS</a>
-                            <a href="#" class="app-tag">Multiplayer</a>
-                            <a href="#" class="app-tag">Competitive</a>
-                            <a href="#" class="app-tag">Shooter</a>
-                            <a href="#" class="app-tag">Tactical</a>
-                            <a href="#" class="app-tag">Team-Based</a>
-                            <a href="#" class="app-tag">e-sports</a>
                         </div>
                     </div>
 
@@ -267,7 +280,7 @@
 
             <div class="app-reviews">
                 <div class="review-header">
-                    <h2>CUSTOMER REVIEWS</h2>
+                    <h2>PLAYER FEEDBACK</h2>
                 </div>
                 <div class="review-summary">
                     <div class="summary-rating">
@@ -286,7 +299,7 @@
                                 <div class="review-rating">Recommended</div>
                                 <div class="review-hours">1,562 hrs on record</div>
                                 <div class="review-description">
-                                    <p>Rush B don't stop! Best competitive shooter ever made.</p>
+                                    <p>Best competitive shooter I've ever played. The teamwork and strategy elements make every round feel fresh.</p>
                                 </div>
                             </div>
                         </div>
@@ -301,7 +314,7 @@
                                 <div class="review-rating">Recommended</div>
                                 <div class="review-hours">2,241 hrs on record</div>
                                 <div class="review-description">
-                                    <p>The definitive competitive FPS. After all these years, it's still the gold standard.</p>
+                                    <p>After all these years, it's still the gold standard for tactical FPS games. Nothing beats the satisfaction of a perfect site execute.</p>
                                 </div>
                             </div>
                         </div>
@@ -321,11 +334,11 @@
                 <p>VAT included in all prices where applicable.</p>
             </div>
             <div class="footer-links">
-                <a href="#">About Valve</a> |
-                <a href="#">Steamworks</a> |
-                <a href="#">Jobs</a> |
-                <a href="#">Steam Distribution</a> |
-                <a href="#">Support</a>
+                <a href="#">Valve</a> |
+                <a href="#">Privacy Policy</a> |
+                <a href="#">Legal</a> |
+                <a href="#">Steam Subscriber Agreement</a> |
+                <a href="#">Report A Bug</a>
             </div>
         </div>
     </div>
