--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter-Strike: Global Offensive on Steam</title>
+    <title>Counter-Strike: Global Offensive</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         /* Additional styles for static placeholders */
@@ -70,6 +70,14 @@
             width: 88px;
             height: 25px;
         }
+
+        .green-gradient {
+            background: linear-gradient(to right, #00b09b, #96c93d);
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -79,10 +87,9 @@
                 <a href="#"><div class="logo-placeholder">STEAM</div></a>
             </div>
             <div class="menu">
-                <a href="#" class="active">STORE</a>
-                <a href="#">LIBRARY</a>
+                <a href="#">PERFORMANCE</a>
                 <a href="#">COMMUNITY</a>
-                <a href="#">ABOUT</a>
+                <a href="#">SERVERS</a>
                 <a href="#">SUPPORT</a>
             </div>
             <div class="global-actions">
@@ -100,16 +107,15 @@
         <div class="store-nav">
             <div class="store-nav-inner">
                 <div class="store-nav-left">
-                    <a href="#">Your Store</a>
-                    <a href="#">New Releases</a>
-                    <a href="#">Categories</a>
+                    <a href="#">Updates</a>
+                    <a href="#">Operations</a>
+                    <a href="#">Tournaments</a>
                     <a href="#">News</a>
-                    <a href="#">Recommended</a>
+                    <a href="#">Discord</a>
                 </div>
                 <div class="store-nav-right">
                     <div class="search">
-                        <input type="text" placeholder="search the store">
-                        <button class="btn-search"></button>
+                        <div class="date-time" id="date-time">Loading date and time...</div>
                     </div>
                     <div class="cart">
                         <a href="#" class="cart-btn"></a>
@@ -120,9 +126,6 @@
 
         <div class="app-page">
             <div class="app-header">
-                <div class="breadcrumbs">
-                    <a href="#">All Games</a> &gt; <a href="#">Action Games</a> &gt; <a href="#">Counter-Strike: Global Offensive</a>
-                </div>
                 <div class="app-title">
                     <h1>Counter-Strike: Global Offensive</h1>
                 </div>
@@ -132,19 +135,22 @@
                 <div class="app-left-column">
                     <div class="highlight-trailer">
                         <div class="highlight-player">
-                            <div class="placeholder-video">COUNTER-STRIKE: GLOBAL OFFENSIVE TRAILER</div>
+                            <video id="game-trailer" controls poster="img/poster-placeholder.jpg" class="game-video">
+                                <source src="videos/your-trailer.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                         <div class="highlight-strip">
-                            <div class="highlight-selector selected">
+                            <div class="highlight-selector selected" data-type="video" data-src="videos/your-trailer.mp4">
                                 <div class="video-thumbnail">TRAILER</div>
                             </div>
-                            <div class="highlight-selector">
+                            <div class="highlight-selector" data-type="image" data-src="img/screenshots/dust2.jpg">
                                 <div class="video-thumbnail">DUST II</div>
                             </div>
-                            <div class="highlight-selector">
+                            <div class="highlight-selector" data-type="image" data-src="img/screenshots/inferno.jpg">
                                 <div class="video-thumbnail">INFERNO</div>
                             </div>
-                            <div class="highlight-selector">
+                            <div class="highlight-selector" data-type="image" data-src="img/screenshots/match.jpg">
                                 <div class="video-thumbnail">MATCH</div>
                             </div>
                         </div>
@@ -154,7 +160,8 @@
                         <h2>About This Game</h2>
                         <p>Counter-Strike: Global Offensive (CS:GO) expands upon the team-based action gameplay that it pioneered when it was launched 19 years ago.</p>
                         <p>CS:GO features new maps, characters, weapons, and game modes, and delivers updated versions of the classic CS content (de_dust2, etc.).</p>
-                        <p>"Counter-Strike took the gaming industry by surprise when the unlikely MOD became the most played online PC action game in the world almost immediately after its release in August 1999," said Doug Lombardi at Valve. "For the past 12 years, it has continued to be one of the most-played games in the world, headline competitive gaming tournaments and selling over 25 million units worldwide across the franchise. CS:GO promises to expand on CS' award-winning gameplay and deliver it to gamers on the PC as well as the next gen consoles and the Mac."</p>
+                        <p>CS:GO has remained one of the most-played games in the world, continuing to headline competitive gaming tournaments and selling over 25 million units worldwide across the franchise.</p>
+                        <p>Join the global CS:GO community and experience the evolution of the world's most popular tactical FPS.</p>
                     </div>
 
                     <div class="sys-reqs">
@@ -174,47 +181,14 @@
                             <div class="sys-reqs-rec">
                                 <h3>RECOMMENDED:</h3>
                                 <ul>
-                                    <li><strong>OS:</strong> Windows® 7/Vista/XP</li>
-                                    <li><strong>Processor:</strong> Intel® Core™ 2 Duo E6600 or AMD Phenom™ X3 8750 processor or better</li>
+                                    <li><strong>OS:</strong> Windows® 8.1</li>
+                                    <li><strong>Processor:</strong> Intel® Core™ i5-3330 or better</li>
                                     <li><strong>Memory:</strong> 4 GB RAM</li>
-                                    <li><strong>Graphics:</strong> Video card must be 256 MB or more and should be a DirectX 9-compatible with support for Pixel Shader 3.0</li>
-                                    <li><strong>DirectX:</strong> Version 9.0c</li>
-                                    <li><strong>Storage:</strong> 15 GB available space</li>
+                                    <li><strong>Graphics:</strong> Video card must be 1GB VRAM GDDR4 or DDR3, NVIDIA® GeForce™ GTX 770</li>
+                                    <li><strong>DirectX:</strong> Version 10.0</li>
+                                    <li><strong>Storage:</strong> 30 GB available space</li>
                                 </ul>
                             </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="app-right-column">
-                    <div class="game-purchase">
-                        <div class="game-header-image">
-                            <div class="csgo-header">CS:GO</div>
-                        </div>
-                        <div class="game-purchase-price">
-                            <h1>FREE TO PLAY</h1>
-                            <div class="game-purchase-action">
-                                <div class="btn-action">
-                                    <a href="#" class="btn-download">Download</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="block">
-                        <div class="block-header">
-                            <h4>CATEGORIES</h4>
-                        </div>
-                        <div class="block-content">
-                            <a href="#" class="app-tag">Action</a>
-                            <a href="#" class="app-tag">Free to Play</a>
-                            <a href="#" class="app-tag">FPS</a>
-                            <a href="#" class="app-tag">Multiplayer</a>
-                            <a href="#" class="app-tag">Competitive</a>
-                            <a href="#" class="app-tag">Shooter</a>
-                            <a href="#" class="app-tag">Tactical</a>
-                            <a href="#" class="app-tag">Team-Based</a>
-                            <a href="#" class="app-tag">e-sports</a>
                         </div>
                     </div>
 
@@ -247,19 +221,62 @@
 
                     <div class="block">
                         <div class="block-header">
+                            <h4>ACCOUNT STATUS</h4>
+                        </div>
+                        <div class="block-content">
+                            <div class="account-status">
+                                <div id="login-box">
+                                    <div class="login-form">
+                                        <input type="text" id="username" placeholder="Username" class="account-input">
+                                        <input type="password" id="password" placeholder="Password" class="account-input">
+                                        <button id="login-button" class="account-button">Login</button>
+                                    </div>
+                                </div>
+                                <div id="logged-in-box" style="display:none;">
+                                    <div class="green-gradient">
+                                        <p>Welcome, <span id="display-username">User</span>!</p>
+                                        <p>Account in good standing</p>
+                                        <p>VAC Status: Clean</p>
+                                    </div>
+                                    <button id="logout-button" class="account-button">Logout</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="app-right-column">
+                    <div class="game-purchase">
+                        <div class="game-header-image">
+                            <div class="csgo-header">CS:GO</div>
+                        </div>
+                        <div class="game-purchase-price">
+                            <h1>PLAY NOW</h1>
+                            <div class="game-purchase-action">
+                                <div class="btn-action">
+                                    <a href="#" class="btn-download">LAUNCH GAME</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="block">
+                        <div class="block-header">
                             <h4>POPULAR USER-DEFINED TAGS FOR THIS PRODUCT</h4>
                         </div>
                         <div class="block-content">
-                            <a href="#" class="app-tag">FPS</a>
-                            <a href="#" class="app-tag">Shooter</a>
-                            <a href="#" class="app-tag">Multiplayer</a>
-                            <a href="#" class="app-tag">Competitive</a>
-                            <a href="#" class="app-tag">Action</a>
-                            <a href="#" class="app-tag">Team-Based</a>
-                            <a href="#" class="app-tag">Tactical</a>
-                            <a href="#" class="app-tag">First-Person</a>
-                            <a href="#" class="app-tag">e-sports</a>
-                            <a href="#" class="app-tag">Military</a>
+                            <div class="green-gradient">
+                                <a href="#" class="app-tag">FPS</a>
+                                <a href="#" class="app-tag">Shooter</a>
+                                <a href="#" class="app-tag">Multiplayer</a>
+                                <a href="#" class="app-tag">Competitive</a>
+                                <a href="#" class="app-tag">Action</a>
+                                <a href="#" class="app-tag">Team-Based</a>
+                                <a href="#" class="app-tag">Tactical</a>
+                                <a href="#" class="app-tag">First-Person</a>
+                                <a href="#" class="app-tag">e-sports</a>
+                                <a href="#" class="app-tag">Military</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -267,7 +284,7 @@
 
             <div class="app-reviews">
                 <div class="review-header">
-                    <h2>CUSTOMER REVIEWS</h2>
+                    <h2>PLAYER FEEDBACK</h2>
                 </div>
                 <div class="review-summary">
                     <div class="summary-rating">
@@ -286,7 +303,7 @@
                                 <div class="review-rating">Recommended</div>
                                 <div class="review-hours">1,562 hrs on record</div>
                                 <div class="review-description">
-                                    <p>Rush B don't stop! Best competitive shooter ever made.</p>
+                                    <p>Best competitive shooter I've ever played. The teamwork and strategy elements make every round feel fresh.</p>
                                 </div>
                             </div>
                         </div>
@@ -301,7 +318,7 @@
                                 <div class="review-rating">Recommended</div>
                                 <div class="review-hours">2,241 hrs on record</div>
                                 <div class="review-description">
-                                    <p>The definitive competitive FPS. After all these years, it's still the gold standard.</p>
+                                    <p>After all these years, it's still the gold standard for tactical FPS games. Nothing beats the satisfaction of a perfect site execute.</p>
                                 </div>
                             </div>
                         </div>
@@ -321,11 +338,11 @@
                 <p>VAT included in all prices where applicable.</p>
             </div>
             <div class="footer-links">
-                <a href="#">About Valve</a> |
-                <a href="#">Steamworks</a> |
-                <a href="#">Jobs</a> |
-                <a href="#">Steam Distribution</a> |
-                <a href="#">Support</a>
+                <a href="#">Valve</a> |
+                <a href="#">Privacy Policy</a> |
+                <a href="#">Legal</a> |
+                <a href="#">Steam Subscriber Agreement</a> |
+                <a href="#">Report A Bug</a>
             </div>
         </div>
     </div>
